--- a/app/app.json
+++ b/app/app.json
@@ -1,4 +1,28 @@
 {
   "name": "eSports",
-  "displayName": "eSports"
+  "displayName": "eSports",
+  "orientation": "portrait",
+  "icon": "./assets/icon.png",
+  "userInterfaceStyle": "light",
+  "splash": {
+    "image": "./assets/splash.png",
+    "resizeMode": "contain",
+    "backgroundColor": "#121214"
+  },
+  "updates": {
+    "fallbackToCacheTimeout": 0
+  },
+  "assetBundlePatterns": ["**/*"],
+  "ios": {
+    "supportsTablet": true
+  },
+  "android": {
+    "adaptiveIcon": {
+      "foregroundImage": "./assets/adaptive-icon.png",
+      "backgroundColor": "#121214"
+    }
+  },
+  "web": {
+    "favicon": "./assets/favicon.png"
+  }
 }
