--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,8 @@
     "react-native": "0.70.0",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-safe-area-context": "^4.3.3",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.5"
   },
