--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,8 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
     "axios": "^0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.0",
@@ -20,8 +22,8 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.3.3",
-    "react-native-vector-icons": "^9.2.0",
-    "styled-components": "^5.3.5"
+    "react-native-screens": "^3.17.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
